# Physics_Engine

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile.bat  compile.py
assets/shaders/3DShader/default/: default.shader
assets/shaders/defaultShader/: default.frag  default.shader
configs/: startup.cfg
src/: CMakeLists.txt  command.hpp  customDataTypes.hpp  gameEngine.cpp  gameEngine.hpp  inputHandler.cpp  inputHandler.hpp  log.cpp  log.hpp  main.cpp  objectLoader.cpp  objectLoader.hpp  publisher.cpp  publisher.hpp  screen.cpp  screen.hpp  stb_image.cpp  time.cpp  time.hpp
src/imgui/: CMakeLists.txt
src/objects/: components.hpp  gameObjects.cpp  gameObjects.hpp
src/renderer/: indexBuffer.cpp  indexBuffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vertexArray.cpp  vertexArray.hpp  vertexBuffer.cpp  vertexBuffer.hpp  vertexBufferLayout.cpp  vertexBufferLayout.hpp
